// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders FlameGraph correctly 1`] = `
<div
  className="flameGraph"
>
  <div
    className="stackSettings"
  >
    <ul
      className="stackSettingsList"
    >
      <li
        className="stackSettingsListItem stackSettingsFilter"
      >
        <label
          className="stackSettingsFilterLabel"
        >
          <input
            checked={true}
            className="stackSettingsFilterInput"
            name="stack-settings-filter"
            onChange={[Function]}
            title="Filter stack frames to a type."
            type="radio"
            value="combined"
          />
          All stacks
        </label>
        <label
          className="stackSettingsFilterLabel"
        >
          <input
            checked={false}
            className="stackSettingsFilterInput"
            name="stack-settings-filter"
            onChange={[Function]}
            title="Filter stack frames to a type."
            type="radio"
            value="js"
          />
          JavaScript
        </label>
        <label
          className="stackSettingsFilterLabel"
        >
          <input
            checked={false}
            className="stackSettingsFilterInput"
            name="stack-settings-filter"
            onChange={[Function]}
            title="Filter stack frames to a type."
            type="radio"
            value="cpp"
          />
          Native
        </label>
      </li>
    </ul>
    <div
      className="stackSearchField stackSettingsSearchField"
    >
      <label
        className="stackSearchFieldLabel"
      >
        Filter stacks: 
        <form
          className="idleSearchField stackSearchFieldInput"
          onSubmit={[Function]}
        >
          <input
            className="idleSearchFieldInput"
            name="search"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required="required"
            title="Only display stacks which contain a function whose name matches this substring"
            type="search"
            value=""
          />
          <input
            className="idleSearchFieldButton"
            onClick={[Function]}
            tabIndex={-1}
            type="reset"
          />
        </form>
        <div
          className="stackSearchFieldIntroduction isHidden"
        >
          Did you know you can use the comma (,) to search using several terms?
        </div>
      </label>
    </div>
  </div>
  <ol
    className="filterNavigatorBar calltreeTransformNavigator"
  >
    <li
      className="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
      data-index={0}
      onClick={[Function]}
      title="Complete \\"Empty\\""
    >
      <span
        className="filterNavigatorBarItemContent"
      >
        Complete "Empty"
      </span>
    </li>
  </ol>
  <div
    className="flameGraphContent"
  >
    <div
      className="react-contextmenu-wrapper treeViewContextMenu"
      onContextMenu={[Function]}
      onMouseDown={[Function]}
      onMouseOut={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="chartViewport"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onWheel={[Function]}
        tabIndex={0}
      >
        <div>
          <canvas
            className="chartCanvas flameGraphCanvas"
            onDoubleClick={[Function]}
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            onMouseOut={[Function]}
            onMouseUp={[Function]}
          />
        </div>
        <div
          className="chartViewportShiftScroll hidden"
        >
          Zoom Chart:
          <kbd
            className="chartViewportShiftScrollKbd"
          >
            Shift
          </kbd>
          <kbd
            className="chartViewportShiftScrollKbd"
          >
            Scroll
          </kbd>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders FlameGraph correctly 2`] = `
Array [
  Array [
    "scale",
    1,
    1,
  ],
  Array [
    "measureText",
    "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ.()< /:-_",
  ],
  Array [
    "measureText",
    "…",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    0,
    200,
    300,
  ],
  Array [
    "set fillStyle",
    "#c1e0ff",
  ],
  Array [
    "fillRect",
    0,
    284,
    200,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    284,
    1,
    15,
  ],
  Array [
    "measureText",
    "A",
  ],
  Array [
    "set fillStyle",
    "#000f40",
  ],
  Array [
    "fillText",
    "A",
    3,
    295,
  ],
  Array [
    "set fillStyle",
    "#c1e0ff",
  ],
  Array [
    "fillRect",
    0,
    268,
    200,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    268,
    1,
    15,
  ],
  Array [
    "measureText",
    "B",
  ],
  Array [
    "set fillStyle",
    "#000f40",
  ],
  Array [
    "fillText",
    "B",
    3,
    279,
  ],
  Array [
    "set fillStyle",
    "#c1e0ff",
  ],
  Array [
    "fillRect",
    0,
    252,
    133.33333333333331,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    252,
    1,
    15,
  ],
  Array [
    "measureText",
    "C",
  ],
  Array [
    "set fillStyle",
    "#000f40",
  ],
  Array [
    "fillText",
    "C",
    3,
    263,
  ],
  Array [
    "set fillStyle",
    "#c1e0ff",
  ],
  Array [
    "fillRect",
    133.33333333333331,
    252,
    66.66666666666667,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    133.33333333333331,
    252,
    1,
    15,
  ],
  Array [
    "measureText",
    "H",
  ],
  Array [
    "set fillStyle",
    "#000f40",
  ],
  Array [
    "fillText",
    "H",
    136.33333333333331,
    263,
  ],
  Array [
    "set fillStyle",
    "#c1e0ff",
  ],
  Array [
    "fillRect",
    0,
    236,
    66.66666666666666,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    236,
    1,
    15,
  ],
  Array [
    "measureText",
    "D",
  ],
  Array [
    "set fillStyle",
    "#000f40",
  ],
  Array [
    "fillText",
    "D",
    3,
    247,
  ],
  Array [
    "set fillStyle",
    "#c1e0ff",
  ],
  Array [
    "fillRect",
    66.66666666666666,
    236,
    66.66666666666666,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    66.66666666666666,
    236,
    1,
    15,
  ],
  Array [
    "measureText",
    "F",
  ],
  Array [
    "set fillStyle",
    "#000f40",
  ],
  Array [
    "fillText",
    "F",
    69.66666666666666,
    247,
  ],
  Array [
    "set fillStyle",
    "#218fff",
  ],
  Array [
    "fillRect",
    133.33333333333331,
    236,
    66.66666666666667,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    133.33333333333331,
    236,
    1,
    15,
  ],
  Array [
    "measureText",
    "I",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillText",
    "I",
    136.33333333333331,
    247,
  ],
  Array [
    "set fillStyle",
    "#218fff",
  ],
  Array [
    "fillRect",
    0,
    220,
    66.66666666666666,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    0,
    220,
    1,
    15,
  ],
  Array [
    "measureText",
    "E",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillText",
    "E",
    3,
    231,
  ],
  Array [
    "set fillStyle",
    "#218fff",
  ],
  Array [
    "fillRect",
    66.66666666666666,
    220,
    66.66666666666666,
    15,
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillRect",
    66.66666666666666,
    220,
    1,
    15,
  ],
  Array [
    "measureText",
    "G",
  ],
  Array [
    "set fillStyle",
    "#ffffff",
  ],
  Array [
    "fillText",
    "G",
    69.66666666666666,
    231,
  ],
]
`;

exports[`renders a message instead of FlameGraph when call stack is inverted 1`] = `
<div
  className="flameGraph"
>
  <div
    className="stackSettings"
  >
    <ul
      className="stackSettingsList"
    >
      <li
        className="stackSettingsListItem stackSettingsFilter"
      >
        <label
          className="stackSettingsFilterLabel"
        >
          <input
            checked={true}
            className="stackSettingsFilterInput"
            name="stack-settings-filter"
            onChange={[Function]}
            title="Filter stack frames to a type."
            type="radio"
            value="combined"
          />
          All stacks
        </label>
        <label
          className="stackSettingsFilterLabel"
        >
          <input
            checked={false}
            className="stackSettingsFilterInput"
            name="stack-settings-filter"
            onChange={[Function]}
            title="Filter stack frames to a type."
            type="radio"
            value="js"
          />
          JavaScript
        </label>
        <label
          className="stackSettingsFilterLabel"
        >
          <input
            checked={false}
            className="stackSettingsFilterInput"
            name="stack-settings-filter"
            onChange={[Function]}
            title="Filter stack frames to a type."
            type="radio"
            value="cpp"
          />
          Native
        </label>
      </li>
    </ul>
    <div
      className="stackSearchField stackSettingsSearchField"
    >
      <label
        className="stackSearchFieldLabel"
      >
        Filter stacks: 
        <form
          className="idleSearchField stackSearchFieldInput"
          onSubmit={[Function]}
        >
          <input
            className="idleSearchFieldInput"
            name="search"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required="required"
            title="Only display stacks which contain a function whose name matches this substring"
            type="search"
            value=""
          />
          <input
            className="idleSearchFieldButton"
            onClick={[Function]}
            tabIndex={-1}
            type="reset"
          />
        </form>
        <div
          className="stackSearchFieldIntroduction isHidden"
        >
          Did you know you can use the comma (,) to search using several terms?
        </div>
      </label>
    </div>
  </div>
  <ol
    className="filterNavigatorBar calltreeTransformNavigator"
  >
    <li
      className="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
      data-index={0}
      onClick={[Function]}
      title="Complete \\"Empty\\""
    >
      <span
        className="filterNavigatorBarItemContent"
      >
        Complete "Empty"
      </span>
    </li>
  </ol>
  <div
    className="flameGraphDisabledMessage"
  >
    <h3>
      The Flame Graph is not available for inverted call stacks
    </h3>
    <p>
      <button
        onClick={[Function]}
        type="button"
      >
        Switch to the normal call stack
      </button>
       
      to show the Flame Graph.
    </p>
  </div>
</div>
`;
